# ProveNuance2

./: .gitignore  README.md  pyproject.toml  schemat-odpowiedzi-extractora.json
_initial data/: predykaty-manifest.json  prompt-extractor.md  prompt-nlp-extractor.md  schemat-warunek.json
data_model/: __init__.py  common.py  conditions.py  constants.py  documents.py  predicates.py  rules.py
db/: schema.sql  seed_predicates.py
docker/: .env.example  Dockerfile  docker-compose.yml
docker/init/: 01-init.sql
docs/: dokumentacja-projektu.md
examples/: sprawa-akademia-001.json
html_parser/: parser.py
llm_query/: __init__.py  assumptions.py  conditions_store.py  constants.py  derived_predicates.py  derived_rules.py  gemini.py  prompt.py  rules.py
pdf/: __init__.py  parser.py  section_patterns.py  text_cleaner.py
pn2/: _db.py  cli.py
pn2/commands/: apply_schema.py  assumptions.py  conditions.py  constants.py  derived_predicates.py  derived_rules.py  extract.py  extract_document.py  ingest.py  ingest_url.py  load_manifest.py  nlp_solve.py  predicates.py  prompt.py  reset.py  rules.py  solve.py  validate_rule.py
scripts/: bootstrap.ps1  install-pip.ps1
solver/: __init__.py  engine.py  loader.py  types.py
templates-schemas/: lista-predykatow.md  predykaty-manifest.json  prompt-extractor.md  prompt-interpreter.md  prompt-nlp-goal-translator.md  reguly-manifest.json  schemat-predykat.json  schemat-regula.json  schemat-stala.json
validator/: __init__.py  manifest_index.py  normalizer.py  rule_validator.py  types.py
