[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "provenuance2"
version = "0.1.0"
description = "Project scaffold configured for Python launcher and Git workflow"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary>=2.9",
    "rich>=13.0",
    "PyMuPDF>=1.24",
]

[project.scripts]
pn2 = "pn2.cli:main"

[tool.setuptools.packages.find]
include = ["pn2*", "pdf*", "data_model*", "llm_query*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
